updating gap to fix screen size

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -3,7 +3,7 @@
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 7px;
     width: 100%;
     padding: 2%;
 }
