--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -1,5 +1,4 @@
 .menu-item {
-    width: 100%; 
     border-width: 2px;
     border-color: rgb(107, 20, 20);
     border-style: solid;
